--- a/index.html
+++ b/index.html
@@ -18,15 +18,10 @@ title: 小福的博客
   <li><span>06 Sep 2014</span> &raquo; <a href="/others/c/learn-c-the-hard-way.html">笨方法学习C语言(翻译中)</a></li>
 </ul>
 
-  <h1>Prominent Open Source Projects</h1>
+  <h1>Open Source Projects</h1>
   <ul class="posts">
-    <li><a href="http://github.com/github/gollum/">Gollum:</a> A simple, Git-powered wiki with a sweet API and local frontend.</li>
-    <li><a href="http://github.com/mojombo/jekyll/">Jekyll:</a> A simple, blog aware, static site generator (used for this site).</li>
-    <li><a href="http://github.com/mojombo/god/">God:</a> Ruby process monitoring framework with easy extensibility.</li>
-    <li><a href="http://github.com/mojombo/grit/">Grit:</a> Object oriented Ruby bindings for Git (used by GitHub).</li>
-    <li><a href="http://github.com/mojombo/ernie/">Ernie:</a> Ruby/Erlang Hybrid BERT-RPC server.</li>
-    <li><a href="http://github.com/mojombo/proxymachine/">ProxyMachine:</a> Layer 7 routing proxy in Ruby with Event Machine.</li>
-    <li><a href="http://github.com/mojombo/primer/">Primer:</a> JavaScript based Flash-like API layered on top of Canvas.</li>
+    <li><a href="http://www.sinatrarb.com/intro-zh.html">Sinatra:</a> 一个基于Ruby语言的DSL（ 领域专属语言），可以轻松、快速的创建web应用。</li>
+    <li><a href="http://jekyllcn.com/">Jekyll:</a> 一个简单的静态博客生成应用。</li>
     <li><a href="http://github.com/mojombo/chronic/">Chronic:</a> Ruby natural language date/time parser.</li>
   </ul>
 </div>
