--- a/others/mywebsites.html
+++ b/others/mywebsites.html
@@ -1,14 +1,17 @@
 ---
 layout: default
-title: my love website,I hope you love these too!
+title:Love websites,I hope you love  too!
 ---
 
 
-<h1>some beatful websites</h1>
+<h1>some beatiful websites</h1>
 <ul class="posts">
 	<li><a href="http://www.yinwang.org/">wangyin's blog</a></li>
 	<li><a href="http://www.solidot.org/">Solodot articles</a></li>
 	<li><a href="http://news.dbanotes.net/">hacknews news(china)</a></li>
 	<li><a href="https://news.ycombinator.com/">hacknews news(foreign)</a></li>
+	<li><a href="http://www.ituring.com.cn/">hacknews news(foreign)</a></li>
 	<li><a href="https://ruby-china.org/">Ruby china</a></li>
+	<li><a href = "http://weekly.manong.io/issues/">码农周刊</a></li>
+	<li><a href = "./programm-resources/web-study.html">web资源整理</a></li>
 </ul>
