add web resources

--- a/others/mywebsites.html
+++ b/others/mywebsites.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title:Love websites,I hope you love  too!
+   layout: default
+   title:Love websites,I hope you love  too!
 ---
 
 
@@ -12,6 +12,6 @@ title:Love websites,I hope you love  too!
 	<li><a href="https://news.ycombinator.com/">hacknews news(foreign)</a></li>
 	<li><a href="http://www.ituring.com.cn/">hacknews news(foreign)</a></li>
 	<li><a href="https://ruby-china.org/">Ruby china</a></li>
-	<li><a href = "http://weekly.manong.io/issues/">码农周刊</a></li>
-	<li><a href = "./programm-resources/web-study.html">web资源整理</a></li>
+	<li><a href = "http://weekly.manong.io/issues/"></a></li>
+	<li><a href = "./programm-resources/web-study.html">web</a></li>
 </ul>
