--- a/others/programm-resources/web-study.html
+++ b/others/programm-resources/web-study.html
@@ -1,3 +1,7 @@
+---
+   layout: default
+   title: Web resources
+---
 
 
 
@@ -6,6 +10,6 @@
 	<li><a href="https://github.com/JingwenTian/awesome-frontend/blob/master/README.md">前端组件库</a></li>
 	<li><a href="https://github.com/xiaofuzi/fks">前端开发知识结构</a></li>
 	<li><a href = "http://web.memect.com/">web技术日报</a></li>
-	<li><a href="https://github.com/xiaofuzi/ruby-dev-bookmarks">ruby study</a></li>
+	<li><a href="https://github.com/xiaofuzi/ruby-dev-bookmarks">ruby study教程</a></li>
 	<li><a href="http://railstutorial-china.org/">rails tutorial</a></li>
 </ul>
