--- a/others/mywebsites.html
+++ b/others/mywebsites.html
@@ -10,7 +10,7 @@
 	<li><a href="http://www.solidot.org/">Solodot articles</a></li>
 	<li><a href="http://news.dbanotes.net/">hacknews news(china)</a></li>
 	<li><a href="https://news.ycombinator.com/">hacknews news(foreign)</a></li>
-	<li><a href="http://www.ituring.com.cn/">hacknews news(foreign)</a></li>
+	<li><a href="http://www.ituring.com.cn/">图灵社区</a></li>
 	<li><a href="https://ruby-china.org/">Ruby china</a></li>
 	<li><a href = "http://weekly.manong.io/issues/">码农周刊</a></li>
 	<li><a href = "./programm-resources/web-study.html">web学习资源</a></li>
