--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@ title: 小福的博客
 
 <h1>Reading and working</h1>
 <ul class="posts">
-  <li><span>06 Sep 2014</span> &raquo; <a href="/others/c/learn-c-the-hard-way.html">笨方法学习C语言(翻译中)</a></li>
-  <li><span>12 Mar 2015</span> &raquo; <a href="/others/programm-resources/programm-tools.html">web开发利器</a></li>
+      <li><span>13 Mar 2015</span> &raquo;<a href = "./programm-resources/web-study.html">web学习资源</a></li>
+      <li><span>12 Mar 2015</span> &raquo; <a href="/others/programm-resources/programm-tools.html">web开发利器</a></li>
+      <li><span>06 Sep 2014</span> &raquo; <a href="/others/c/learn-c-the-hard-way.html">笨方法学习C语言(翻译中)</a></li>
 </ul>
 
   <h1>Open Source Projects</h1>
   <ul class="posts">
-    <li><a href="http://www.sinatrarb.com/intro-zh.html">Sinatra:</a> 一个基于Ruby语言的DSL（ 领域专属语言），可以轻松、快速的创建web应用。</li>
+    <li><a href="http://www.sinatrarb.com/intro-zh.html">Sinatra:</a> 一个ruby web framework，可以轻松、快速的创建web应用。</li>
     <li><a href="http://jekyllcn.com/">Jekyll:</a> 一个简单的静态博客生成应用。</li>
-    <li><a href="http://github.com/mojombo/chronic/">Chronic:</a> Ruby natural language date/time parser.</li>
+    <li><a href="http://rubyonrails.org/">Rails:</a> Powerful web framework(MVC).</li>
   </ul>
 </div>
