fix a link error

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: 小福的博客
 
 <h1>Reading and working</h1>
 <ul class="posts">
-      <li><span>13 Mar 2015</span> &raquo;<a href = "./programm-resources/web-study.html">web学习资源</a></li>
+      <li><span>13 Mar 2015</span> &raquo;<a href = "/others/programm-resources/web-study.html">web学习资源</a></li>
       <li><span>12 Mar 2015</span> &raquo; <a href="/others/programm-resources/programm-tools.html">web开发利器</a></li>
       <li><span>06 Sep 2014</span> &raquo; <a href="/others/c/learn-c-the-hard-way.html">笨方法学习C语言(翻译中)</a></li>
 </ul>
