develop your own css framework

--- a/others/programm-resources/web-study.html
+++ b/others/programm-resources/web-study.html
@@ -10,6 +10,7 @@
 	<li><a href="https://github.com/JingwenTian/awesome-frontend/blob/master/README.md">前端组件库</a></li>
 	<li><a href="https://github.com/xiaofuzi/fks">前端开发知识结构</a></li>
 	<li><a href = "http://web.memect.com/">web技术日报</a></li>
+	<li><a href = "http://www.w3avenue.com/2009/04/01/guidelines-for-developing-your-own-css-framework/">Developing Your Own CSS Framework</a></li>
 	<li><a href="https://github.com/xiaofuzi/ruby-dev-bookmarks">ruby study教程</a></li>
 	<li><a href="http://railstutorial-china.org/">rails tutorial</a></li>
 </ul>
