a simple css framework

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ title: 小福的博客
 
   <h1>Open Source Projects</h1>
   <ul class="posts">
+    <li><a href="https://github.com/xiaofuzi/ch-css-framework">ch-css-framework: </a>a simple css framework(On building)</li>
     <li><a href="http://www.sinatrarb.com/intro-zh.html">Sinatra:</a> 一个ruby web framework，可以轻松、快速的创建web应用。</li>
     <li><a href="http://jekyllcn.com/">Jekyll:</a> 一个简单的静态博客生成应用。</li>
     <li><a href="http://rubyonrails.org/">Rails:</a> Powerful web framework(MVC).</li>
