--- a/index.html
+++ b/index.html
@@ -1,32 +1,3 @@
 ---
-layout: default
-title: 小福的博客
+layout: post
 ---
-
-
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-    
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor%}
-  
-  </ul>
-
-<h1>Reading and working</h1>
-<ul class="posts">
-      <li><span>15 Mar 2015</span> &raquo; <a href = "/others/programm-resources/programm-from-zero.html">从零编程系列</a></li>
-      <li><span>13 Mar 2015</span> &raquo; <a href = "/others/programm-resources/web-study.html">web学习资源</a></li>
-      <li><span>12 Mar 2015</span> &raquo; <a href="/others/programm-resources/programm-tools.html">web开发利器</a></li>
-      <li><span>06 Sep 2014</span> &raquo; <a href="/others/c/learn-c-the-hard-way.html">笨方法学习C语言(翻译中)</a></li>
-</ul>
-
-  <h1>Open Source Projects</h1>
-  <ul class="posts">
-    <li><a href="https://github.com/xiaofuzi/ch-css-framework">ch-css-framework: </a>a simple css framework(正在编写，希望能够对你有用。)</li>
-    <li><a href="http://www.sinatrarb.com/intro-zh.html">Sinatra:</a> 一个ruby web framework，可以轻松、快速的创建web应用。</li>
-    <li><a href="http://jekyllcn.com/">Jekyll:</a> 一个简单的静态博客生成应用。</li>
-    <li><a href="http://rubyonrails.org/">Rails:</a> Powerful web framework(MVC).</li>
-  </ul>
-</div>
