--- a/books.html
+++ b/books.html
@@ -13,7 +13,7 @@
 		<p>作者: Daniel P. Friedman / Matthias Felleisen </p>
 		<p>出版社: The MIT Press</p> 
 		<p>出版年: 1995-12-21</p>
-		<p> 链接:<a href="http://book.douban.com/subject/1632977/">书籍简介</a>
+		<p> 链接:<a href="http://book.douban.com/subject/1632977/" target="_blank">书籍简介</a>
 	</div>
 </div>
 <div class="book-content cf">
@@ -21,11 +21,11 @@
 		<img src="./assets/images/books/hack-and-paint.jpg">
 	</div>
 	<div class="book-message cf">
-		<p>书名黑客与画家</p>
+		<p>书名:黑客与画家</p>
 		<p>作者: 格雷厄姆 译者:阮一峰</p>
 		<p>出版社: 人民邮电出版社  </p> 
 		<p>出版年: 2011年4月</p>
-		<p> 链接:<a href="http://read.douban.com/ebook/387525/?dcs=subject-rec&dcm=douban&dct=6756090">书籍简介</a>
+		<p> 链接:<a href="http://read.douban.com/ebook/387525/?dcs=subject-rec&dcm=douban&dct=6756090" target="_blank">书籍简介</a>
 	</div>
 </div>
 <div class="book-content cf">
@@ -37,7 +37,7 @@
 		<p>作者: 松本行弘 </p>
 		<p>出版社: 人民邮电出版社</p> 
 		<p>出版年: 2011-8</p>
-		<p> 链接:<a href="http://book.douban.com/subject/6756090/">书籍简介</a>
+		<p> 链接:<a href="http://book.douban.com/subject/6756090/" target="_blank">书籍简介</a>
 	</div>
 </div>
 <div class="book-content cf">
@@ -49,6 +49,6 @@
 		<p>作者: Matthias Fellise </p>
 		<p>出版社: 人民邮电出版社</p> 
 		<p>出版年: 2003-12</p>
-		<p> 链接:<a href="http://book.douban.com/subject/1140942/">书籍简介</a>
+		<p> 链接:<a href="http://book.douban.com/subject/1140942/" target="_blank">书籍简介</a>
 	</div>
 </div>
