--- a/mylab.html
+++ b/mylab.html
@@ -6,8 +6,8 @@
 <div class="website-nav">
 	<h1>Web 前端</h1>
 	<ul >
-		<li><a href="./other_sites/javascript/javascript编写风格.html">Javascript编写风格</a></li>
-		<li><a href="./other_sites/javascript/javascript编码规范.html">Javascript编码规范</a></li>
+		<li><a href="./other_sites/javascript/javascript编写风格.html" target="_blank">Javascript编写风格</a></li>
+		<li><a href="./other_sites/javascript/javascript编码规范.html" target="_blank">Javascript编码规范</a></li>
 		
 	</ul>
 </div>
