--- a/category.html
+++ b/category.html
@@ -3,14 +3,13 @@ layout: default
 title: 豆豆的文章，分类浏览。
 ---
 <div　class="row ">
-	<div class="list-group">
+	<div class="category">
 		{% for category in site.categories %}
 			{% assign post_lists = category[1] %} 
 			<h3>{{ post_lists[0].category }}</h3>
 				{% for blog in post_lists %}
-						<a href="{{ blog.url }}" class="list-group-item" target="_blank">{{ blog.title }}</a>
+						<a href="{{ blog.url }}"  target="_blank">{{ blog.title }}</a>
 				{% endfor %}
-		<h2 >{{ categor }}</h2>	
 		{% endfor %}
 	</div>
 </div>
